--- a/foci.cfg
+++ b/foci.cfg
@@ -1,3 +1,3 @@
 noise=35
 background=20
-path=E:/Leukozyten_gH2AX_Foci_02.10.2018/Proband_1.2_Kinetik_0.5Gy_Dosiswirkung_0.5h_und_24h/1.5Gy 45'/
+path=E:/Leukozyten_gH2AX_Foci_02.10.2018/Proband_2/0.5Gy 1.5h/
