--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /*
 !.gitignore
 !README.md
-!main.py
+!FociQ.py
 !config.py
 !foci.cfg
 !evaluation.py
@@ -9,3 +9,4 @@
 macros/*
 !macros/foci.ijm
 !icon.ico
+!requirements.txt
