small gui changes

--- a/foci.cfg
+++ b/foci.cfg
@@ -1,7 +1,7 @@
-noise_g=35
-background_g=20
+noise_g=70
+background_g=50
 noise_r=35
 background_r=20
-path=E:/Foci/
+path=E:/FibroblastenTest/Merged/
 green=1
-red=1
+red=0
